--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   </head>
   <body>
+    <h1>Geocoder</h1>
+    <form id="search-locations" class="form-inline justify-content-center mt-5">
+      <input type="text" id="location" name="location" placeholder="Type a location" class="mr-sm-2 py-1 pl-3">
+      <button class="btn btn-light py-1 font-weight-bold" type="submit">Geocode!</button>
+    </form>
 
 
     <script type='text/javascript' src='config.js'></script>
