--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
   </head>
   <body>
     <h1>Geocoder</h1>
@@ -20,6 +22,7 @@
     </form>
     <div class="d-flex flex-column align-items-center mt-5">
       <div id="gps-coordinates"></div>
+      <div id='map' style='width: 800px; height: 300px;'></div>
     </div>
 
 
